# curseworkOS

./: CMakeLists.txt  README.md  server.cpp
client/: CMakeLists.txt  client.cpp
curseworkOS/: README.md
server/: ExtraFunctions.h  ProcessCommands.h  Server.h  help.txt
server/BaseTree/: BTree.h  CW_Functions.h  CommonWrapper.h  certainData.h
server/ErrorHandler/: ErrorThrower.h
server/Patterns/: CommandPattern.h  HandlerPattern.h  SingletonFlyweightPattern.h
server/Storage/storageMemorySystem/: Test.txt
server/TreeStructure/FileTreeStructure/: BTree_File.h  CollectionsSchema_File.h  CommonPool_File.h  DataWrapper_File.h  Data_File.h  SchemaPool_File.h  SecondaryIndex_File.h
server/TreeStructure/MemoryTreeStructure/: BTree_Memory.h  CollectionsSchema_Memory.h  CommonPool_Memory.h  DataWrapper_Memory.h  Data_Memory.h  SchemaPool_Memory.h  SecondaryIndex_Memory.h
tests/: NATURE.txt  SHOPPING.txt
trash/: DataManager.h  handlers  tree.h  tree_1.txt
